<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" >

    <data>
        <import type="android.view.View"/>
        <import type="java.lang.Integer"/>
        <variable
                name="details"
                type="com.example.projeto.desafioaccandroidkotlin.page.fragment.details.model.DetailsModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/background_item_card">

        <TextView
                android:text="@string/product_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textColor="@color/title_color_text"
                android:textSize="19sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="@string/quantity_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/title_color_text"
                android:textSize="19sp"
                android:id="@+id/textView3" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="@string/add_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/title_color_text"
                android:textSize="19sp"
                android:id="@+id/textView5" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@{details.products.title}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/foreground_text"
                android:textSize="19sp"
                android:id="@+id/product_txt" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/textView"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@{Integer.toString(details.count)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quantity_txt"
                android:textColor="@color/foreground_text"
                android:textSize="19sp"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/product_txt"/>
        <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textColor="@color/foreground_text"
                android:textSize="19sp"
                android:id="@+id/add_txt" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/quantity_txt" app:layout_constraintStart_toEndOf="@+id/textView5"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:id="@+id/icon_iv" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/quantity_txt" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.85"
                app:ImgBaseCustom="@{details.products.image}"/>
    </android.support.constraint.ConstraintLayout>
</layout>