<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="java.lang.Integer"/>
        <variable
                name="viewmodel"
                type="com.example.projeto.desafioaccandroidkotlin.page.fragment.details.model.DetailsViewModel"/>
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".page.fragment.menu.MenuFragment">

        <include android:id="@+id/toolbar"
                 layout="@layout/toolbar" />

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="fitXY"
                        android:background="@drawable/backgrond"
                        android:id="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintVertical_bias="0.0"/>

                <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        app:srcCompat="@drawable/macciato"
                        android:id="@+id/product_image"
                        app:ImgBaseCustom="@{viewmodel.getProductsModel.image}"
                        app:layout_constraintTop_toTopOf="@+id/imageView2"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"/>
                <TextView
                        android:text="@{viewmodel.getProductsModel.title}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/title_color_text"
                        android:textSize="18sp"
                        android:id="@+id/product_name_txt" android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="32dp" app:layout_constraintHorizontal_bias="0.0"/>
                <TextView
                        android:text="200 ML"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/quantity_txt" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="32dp" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/product_name_txt" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"/>
                <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:id="@+id/view2"
                        android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@+id/quantity_txt" app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="@color/color_view"/>
                <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:id="@+id/view3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="@color/color_view"
                        app:layout_constraintTop_toBottomOf="@+id/size_high_iv" android:layout_marginTop="16dp"/>
                <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:id="@+id/view4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="@color/color_view"
                        app:layout_constraintTop_toBottomOf="@+id/sugar_medium_iv" android:layout_marginTop="24dp"/>
                <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:id="@+id/view5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="@color/color_view"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="24dp"/>
                <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:id="@+id/view6"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="@color/color_view"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/add_cart_btn"
                        android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/view5"/>
                <TextView
                        android:text="@string/size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/title_color_text"
                        android:id="@+id/size_txt" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@+id/view2"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        android:layout_marginTop="24dp" app:layout_constraintHorizontal_bias="0.0"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/view3"
                        app:layout_constraintVertical_bias="0.43"/>
                <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp" app:srcCompat="@drawable/cup"
                        android:id="@+id/low_size_iv" app:layout_constraintStart_toEndOf="@+id/size_txt"
                        android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/view2"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintHorizontal_bias="0.1" android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/view3"
                        app:layout_constraintVertical_bias="0.59000003" android:visibility="invisible"/>
                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp" app:srcCompat="@drawable/cup"
                        android:id="@+id/size_medium_iv" app:layout_constraintTop_toBottomOf="@+id/view2"
                        app:layout_constraintStart_toEndOf="@+id/low_size_iv" android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toStartOf="@+id/size_high_iv" android:layout_marginEnd="8dp"
                        android:layout_marginTop="16dp" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/view3" android:visibility="invisible"/>
                <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp" app:srcCompat="@drawable/cup"
                        android:id="@+id/size_high_iv" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/view2"
                        app:layout_constraintStart_toEndOf="@+id/low_size_iv" android:layout_marginStart="8dp"
                        app:layout_constraintHorizontal_bias="0.6" android:layout_marginTop="16dp"
                        android:visibility="invisible"/>
                <TextView
                        android:text="@string/sugar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sugar_txt"
                        android:textSize="18sp"
                        android:textColor="@color/title_color_text"
                        app:layout_constraintTop_toBottomOf="@+id/view3" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="32dp" android:layout_marginTop="24dp"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/view4"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/no_sugar"
                        android:id="@+id/sugar_no_iv" app:layout_constraintStart_toEndOf="@+id/sugar_txt"
                        android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@+id/view3"
                        android:layout_marginTop="32dp" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/view4"
                        app:layout_constraintVertical_bias="0.0" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.11"
                        android:visibility="invisible"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/sugar1"
                        android:id="@+id/sugar_low_iv" app:layout_constraintTop_toBottomOf="@+id/view3"
                        app:layout_constraintStart_toEndOf="@+id/sugar_no_iv" android:layout_marginStart="32dp"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/view4"
                        app:layout_constraintVertical_bias="0.36" android:layout_marginTop="32dp"
                        android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0" android:visibility="invisible"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/sugar2"
                        android:id="@+id/sugar_medium_iv" app:layout_constraintTop_toBottomOf="@+id/view3"
                        app:layout_constraintStart_toEndOf="@+id/sugar_low_iv" android:layout_marginStart="32dp"
                        android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.03"
                        android:visibility="invisible"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/sugar3"
                        android:id="@+id/sugar_high_iv" app:layout_constraintTop_toBottomOf="@+id/view3"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/view4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/sugar_medium_iv" android:layout_marginStart="32dp"
                        app:layout_constraintVertical_bias="0.0" app:layout_constraintHorizontal_bias="0.0"
                        android:layout_marginTop="32dp" android:visibility="invisible"/>
                <TextView
                        android:text="@string/add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2"
                        android:textSize="18sp"
                        android:textColor="@color/title_color_text"
                        app:layout_constraintTop_toBottomOf="@+id/view4" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:gravity="center"
                        app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/view4" android:id="@+id/add_container"
                        app:layout_constraintBottom_toTopOf="@+id/view5" app:layout_constraintHorizontal_bias="0.0">
                </LinearLayout>
                <TextView
                        android:text="@string/quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView4"
                        android:textSize="18sp"
                        android:textColor="@color/title_color_text"
                        app:layout_constraintTop_toBottomOf="@+id/view5" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
                        android:layout_marginTop="24dp" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/view6" app:layout_constraintVertical_bias="0.0"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:onClick="@{viewmodel.setMinus}"
                        android:layout_height="0dp" app:srcCompat="@drawable/less"
                        android:id="@+id/menos_iv" app:layout_constraintStart_toEndOf="@+id/textView4"
                        android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/view5"
                        android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.67"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/view6"
                        app:layout_constraintVertical_bias="0.13"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:onClick="@{viewmodel.setPlus}"
                        android:layout_height="0dp" app:srcCompat="@drawable/plus"
                        android:id="@+id/plus_iv" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="32dp"
                        app:layout_constraintTop_toBottomOf="@+id/view5"
                        android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/view6"
                        app:layout_constraintVertical_bias="0.32"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/count_txt"
                        android:textSize="18sp"
                        android:text="@{Integer.toString(viewmodel.count)}"
                        android:textColor="@color/title_color_text"
                        android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@+id/view5" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/view6"
                        app:layout_constraintVertical_bias="0.19"
                        android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/plus_iv"
                        app:layout_constraintStart_toEndOf="@+id/menos_iv" android:layout_marginStart="8dp"/>
                <Button
                        android:text="@string/add_to_cart"
                        android:layout_width="0dp"
                        android:onClick="@{viewmodel.addList}"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_btn"
                        android:textColor="@color/color_view"
                        android:id="@+id/add_cart_btn" android:layout_marginBottom="24dp"
                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>

            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>